# StoSClangExperiment

./: .gitignore  CMakeLists.txt  MyASTConsumer.hpp  MyASTVisitor.cpp  MyASTVisitor.hpp  MyFrontendAction.cpp  MyFrontendAction.hpp  README.md  sts.cpp  test_omp.cpp
include/: MyASTVisitor.hpp  SwapToRuntime.hpp
src/: MyASTConsumer.cpp  MyASTVisitor.cpp  SwapToRuntime.cpp  sts.cpp
tst/: helpers.py  tests.py  tests_auto.py  tests_auto_for.py  tests_auto_parallel_for.py  tests_dynamic.py  tests_dynamic_for.py  tests_dynamic_parallel_for.py  tests_guided.py  tests_guided_for.py  tests_guided_parallel_for.py  tests_static.py  tests_static_for.py  tests_static_parallel_for.py  tst.py
tst/expected_output/: test_omp.cpp  test_omp1.cpp  test_omp2.cpp  test_omp5.cpp  test_omp_dynamic1.cpp  test_omp_guided3.cpp  test_omp_guided4.cpp  test_omp_guided_for.cpp
tst/input/: test_omp.cpp  test_omp1.cpp  test_omp3.cpp  test_omp4.cpp  test_omp5.cpp  test_omp_auto2.cpp  test_omp_auto_for.cpp  test_omp_auto_parallel_for.cpp  test_omp_auto_parallel_for1.cpp  test_omp_auto_parallel_for3.cpp  test_omp_auto_parallel_for4.cpp  test_omp_dynamic2.cpp  test_omp_dynamic3.cpp  test_omp_dynamic4.cpp  test_omp_dynamic_parallel_for.cpp  test_omp_dynamic_parallel_for1.cpp  test_omp_dynamic_parallel_for2.cpp  test_omp_guided.cpp  test_omp_guided2.cpp  test_omp_guided3.cpp  test_omp_guided_for.cpp  test_omp_guided_parallel_for1.cpp  test_omp_guided_parallel_for4.cpp  test_omp_static_for.cpp  tst.cpp
